# post-flight-analysis

./: LICENSE  README.md  pyproject.toml
data/2022-06-24_prometheus_sac22/: README.md
data/2022-06-24_prometheus_sac22/interim/: telemega_std.csv  telemega_std.meta.json
data/2022-06-24_prometheus_sac22/raw/: 2022-06-24-serial-6583-flight-0003.csv  2022-06-24-serial-6583-flight-0003.eeprom
data/2024-06-21_hyperion1_sac24/: README.md
data/2024-06-21_hyperion1_sac24/interim/: featherweight_std.csv  featherweight_std.meta.json  telemega_std.csv  telemega_std.meta.json
data/2024-06-21_hyperion1_sac24/raw/: 2024-06-21-serial-6583-flight-0004.csv  2024-06-21-serial-6583-flight-0004.eeprom  FthrWt03337_09-19-2024_20_12_48.xlsx
data/2025-08-21_hyperion2_lc25/: README.md
data/2025-08-21_hyperion2_lc25/interim/: blueraven_hr_std.csv  blueraven_hr_std.meta.json  blueraven_std.csv  blueraven_std.meta.json  featherweight_std.csv  featherweight_std.meta.json  telemega_std.csv  telemega_std.meta.json
data/2025-08-21_hyperion2_lc25/raw/: 2025-08-21_primary_blueraven.csv  2025-08-21_redundant_telemega.csv
data/2025-08-21_hyperion2_lc25/raw/src/: 2025-08-21-serial-6583-flight-0005.eeprom  BR_deploy_settings__08-21-2025_14_11_45.xlsx  FthrWt03337_08-21-2025_13_28_45.csv  FthrWt03337_fw2kml_08-21-2025_13_28_45.kml  WERT FBR HR_08-21-2025_14_11_45.csv
src/pfa/: analyze.py  cli.py  common.py  schema.py
src/pfa/parsers/: __init__.py  blueraven.py  blueraven_hr.py  featherweight.py  telemega.py
