# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-flight-analysis"
version = "0.1.0"
description = "Standardize and analyze mixed altimeter logs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "python-dateutil>=2.9",
  "pytz>=2024.1",
  "typer>=0.12.3",
]

[project.scripts]
pfa = "pfa.cli:app"
